<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_choice_background"
    android:orientation="vertical"
    tools:context="my.game.loto.choiceAction.screens.ChoiceActivity"
    tools:layout_editor_absoluteY="25dp">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:background="@color/choiceTopBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageView1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/money_icon"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:riv_corner_radius="2dp"
            app:riv_mutate_background="false" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="104dp"
            android:layout_marginTop="28dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/diamonds_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="2dp"
            app:riv_mutate_background="false" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageView2"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="28dp"
            android:scaleType="centerCrop"
            android:src="@drawable/money_and_diamonds_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="2dp"
            app:riv_mutate_background="false" />

        <ImageView
            android:id="@+id/icon_view"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/player_icon_background" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="42dp"
            android:layout_height="15dp"
            android:text="@string/raise_money"
            app:layout_constraintBottom_toBottomOf="@+id/imageView1"
            app:layout_constraintEnd_toEndOf="@+id/money_text_view" />

        <TextView
            android:id="@+id/money_text_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:text="@string/raise_diamonds"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView3" />

    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/container_for_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomChoiceLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottomChoiceLayout"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/choiceBottomBar"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/settings_button"
            android:layout_width="181dp"
            android:layout_height="38dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/settings_button"
            android:background="@drawable/choice_bottom_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/help_button"
            android:layout_width="181dp"
            android:layout_height="38dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/help_button"
            android:background="@drawable/choice_bottom_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>